syntax = "proto3";

package ea;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service ExperienceLevelService {
    rpc ListExperienceLevels (ListExperienceLevelsRequest) returns (ListExperienceLevelsResponse);
    rpc GetExperienceLevel (GetExperienceLevelRequest) returns (GetExperienceLevelResponse);
    rpc CreateExperienceLevel (CreateExperienceLevelRequest) returns (CreateExperienceLevelResponse);
    rpc DeleteExperienceLevel (DeleteExperienceLevelRequest) returns (DeleteExperienceLevelResponse);
    rpc UpdateExperienceLevel (UpdateExperienceLevelRequest) returns (UpdateExperienceLevelResponse);
}

message ExperienceLevel {
    string id = 1;
    string name = 2;
    string description = 3;
    google.protobuf.Timestamp created_at = 11;
    google.protobuf.Timestamp updated_at = 12;
}

message ListExperienceLevelsRequest {
    int32 page_size = 2;
    string page_token = 3;
}

message ListExperienceLevelsResponse {
    bool success = 1;
    repeated ExperienceLevel experience_levels = 4;
    string next_page_token = 5;
    int64 total_size = 6;
}

message GetExperienceLevelRequest {
    string experience_level_id = 1;
}

message GetExperienceLevelResponse {
    bool success = 1;
    oneof data {
        string message = 2;
        ExperienceLevel experience_level = 4;
    }
}

message CreateExperienceLevelRequest {
    string request_id = 42;
    string name = 2;
    string description = 3;
}

message CreateExperienceLevelResponse {
    bool success = 1;
    oneof data {
        string message = 2;
        ExperienceLevel experience_level = 4;
    }
}

message DeleteExperienceLevelRequest {
    string request_id = 42;
    string experience_level_id = 1;
}

message DeleteExperienceLevelResponse {
    bool success = 1;
    oneof data {
        string message = 2;
        ExperienceLevel experience_level = 4;
    }
}

message UpdateExperienceLevelRequest {
    string request_id = 42;
    string experience_level_id = 1;
    optional string name = 2;
    optional string description = 3;
}

message UpdateExperienceLevelResponse {
    bool success = 1;
    oneof data {
        string message = 2;
        ExperienceLevel experience_level = 4;
    }
}
