syntax = "proto3";

package ea;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message WorkPreference {
    string id = 1;
    string user_id = 2;
    string work_function_id = 3;
    google.protobuf.Timestamp created_at = 11;
    google.protobuf.Timestamp updated_at = 12;
}
